<resources>
    <string name="app_name">My Pocket Apps</string>
    <string name="calculator">Calculator Apps</string>
    <string name="bmi">BMI Apps</string>
    <string name="temperature">Temperature Converter Apps</string>
    <string name="timezone">Timezone diff Apps</string>
    <string name="age">Age Calculate</string>
    <string name="TicTacToe">TicTacToe</string>
    <string name="currency">Currency</string>
    <string name="hangman">Hangman</string>
    <string name="todo">Todo</string>
    <string name="numeric">Numeric</string>
    <string name="cashier">Cashier</string>
    <string name="scrabble">Scrabble</string>
    <string name="snake_ledder">Snake</string>
    <string name="snakeko">Snakeko</string>
    <string name="battleship">Battleship</string>
    <string name="wtf">WTF</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="three">3</string>
    <string name="allClear">AC</string>
    <string name="multi">X</string>
    <string name="add">+</string>
    <string name="sub">-</string>
    <string name="divide">/</string>
    <string name="equal">=</string>
    <string name="input">Input</string>
    <string name="button">Button</string>
    <string name="output">Output</string>
    <string name="select_temperature">Select Temperature</string>
    <string name="weight">Weight (Kg)</string>
    <string name="height">Height (Cm)</string>
    <string name="Calculate">Calculate</string>
    <string name="severe_thinness">Severe Thinness</string>
    <string name="moderate_thinness">Moderate Thinness</string>
    <string name="mild_thinness">Mild Thinness</string>
    <string name="normal">Normal</string>
    <string name="overweight">Overweight</string>
    <string name="obese_class_i">Obese Class I</string>
    <string name="obese_class_ii">Obese Class II</string>
    <string name="obese_class_iii">Obese Class III</string>
    <string name="title_activity_currency">Currency</string>
    <string name="action_settings">Settings</string>
    <string name="input_helper">Insert a letter</string>
    <string name="new_letter_button">Guess Letter!</string>
    <string name="score">Score: </string>
    <string name="reset">Reset </string>
    <string name="rokok">Rokok</string>
    <string name="roti">Roti</string>
    <string name="nasi">Nasi</string>
    <string name="aqua">Aqua</string>
    <string name="teh_botol">Teh Botol</string>
    <string name="horizontal">Horizontal</string>
    <string name="vertival">Vertical</string>
    <string name="lol">LOL</string>
    <string name="title_activity_home_feeds">HomeFeedsActivity</string>
    <string name="home">Home</string>
</resources>
