<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".main">

    <TextView
        android:id="@+id/word"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:textAllCaps="true"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="20sp"
        android:typeface="monospace" />

    <EditText
        android:id="@+id/new_letter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/input_helper"
        android:inputType="textCapWords"
        android:maxLength="1" />

    <Button
        android:id="@+id/new_letter_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="new_guess"
        android:text="@string/new_letter_button" />

    <TextView
        android:id="@+id/score_help_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="20sp"
        android:text="@string/score"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="20sp"
        android:textSize="15sp" />

    <Button
        android:id="@+id/reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200sp"
        android:onClick="reset"
        android:text="@string/reset"
        android:visibility="gone" />

</LinearLayout>